@@ -40,7 +40,7 @@ Gordon Brown \\ \texttt{gordon.brown@cruk.cam.ac.uk}
 
 % Please increment date when working on this document, so that
 % date shows genuine change date, not merely date of compile.
-\date{19 September 2013}
+\date{27 September 2013}
 \maketitle
 
 \tableofcontents
@@ -466,33 +466,35 @@ dba.plotPCA(tamoxifen,contrast=1,method=DBA_EDGER_BLOCK,
 
 Frequently, as more sites are included in these plots, the result is often worse clustering/separation along the grouping of primary interest. As the correlations used for the heatmap and the count scores used for the PCA plots do not take the blocking factor into account, the separation seen in these plots will not necessarily sharpen after completing a successful block analysis. Compare the resulting correlation heatmap (\reff{tamox-block-corhm} to \reff{tamox-sdb-corhm}).  The PCA plot (\reff{tamox-block-pca}, compared to \reff{tamox-sdb-pca}), shows less distance between the two sample groups along the first component, as more binding sites common to the two MCF7 cell lines are able to be identified as being significantly differentially bound between the Resistant and Responsive sample groups.
 
-It is also interesting to compare the performance of \edgeR with that of \DESeq on this dataset:
+It is also interesting to compare the performance of \edgeR with that of \DESeq and \texttt{DESeq2} on this dataset:
 <<eval=TRUE,echo=TRUE,results=verbatim>>=
-tamoxifen = dba.analyze(tamoxifen,method=DBA_DESEQ)
+tamoxifen = dba.analyze(tamoxifen,method=DBA_ALL_METHODS)
 tamoxifen
 @
 
-While \DESeq has a much more conservative approach to the single factor analysis, identifying only
+\DESeq has a much more conservative approach to the single factor analysis, identifying only
 \Sexpr{as.numeric(levels(dba.show(tamoxifen,bContrasts=T)[1,11]))}
-sites as differentially bound, when modelling the confounding factor, the greater sensitivity results in many more sites being identified. You can check this by looking at the identified sites using \texttt{dba.report}, and performing MA, heatmap, and PCA plots.
+sites as differentially bound, while \texttt{DESeq2} identifies a similar number of sites as \texttt{edgeR}.
+When modelling the confounding factor, the greater sensitivity results in many more sites being identified using all three packges. You can check this by looking at the identified sites using \texttt{dba.report}, and performing MA, heatmap, and PCA plots.
 
-We can also compare the sites identifed using \texttt{edgeR} and those using \texttt{DESeq}. An easy way to do this is to use a special feature of the \texttt{dba.report} function:
+We can also compare the sites identifed using \texttt{edgeR}, \texttt{DESeq}, and \texttt{DESeq2}. An easy way to do this is to use a special feature of the \texttt{dba.report} function:
 
 <<eval=TRUE,echo=TRUE,results=verbatim>>=
-tam.block = dba.report(tamoxifen,method=c(DBA_EDGER_BLOCK,DBA_DESEQ_BLOCK),bDB=T,bAll=T)
+tam.block = dba.report(tamoxifen,method=DBA_ALL_BLOCK,bDB=TRUE,bAll=TRUE)
 tam.block
-dba.plotVenn(tam.block,1:2,label1="edgeR",label2="DESeq")
+dba.plotVenn(tam.block,1:3,label1="edgeR",label2="DESeq",label3="DESeq2")
 @
 
 \begin{figure}
   \centering
-  \includegraphics[width=9cm]{tamox_block_venn.png}
-  \caption{Venn diagram showing overlap of differentially bound peaks identified using \texttt{edgeR} and \texttt{DESeq}.
-Generated by plotting the result of: \texttt{dba.plotVenn(tam.block,1:2,label1="edgeR",label2="DESeq")}}
+  \includegraphics[width=15cm]{tamox_block_venn.png}
+  \caption{Venn diagram showing overlap of differentially bound peaks identified using \texttt{edgeR}, \texttt{DESeq}, and \texttt{DESeq2} to do a multi-factor (blocking) analysis.
+Generated by plotting the result of: \texttt{dba.plotVenn(tam.block,1:3,
+label1="edgeR",label2="DESeq",label3="DESeq2)}}
   \label{fig:tamox-block-venn}
 \end{figure}
 
-The overlap is shown in \reff{tamox-block-venn}.
+The overlap is shown in \reff{tamox-block-venn}. Agreement is quite good, with \texttt{DESeq2} identifying the fewest sites not identified by at least one other method.
 
 \section{Example: occupancy analysis and overlaps}
 
